2004-10-11  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/diagramitem.py: fixed bug in on_subject_notify(),
	that kept old references around.
	* gaphor/ui/mainactions.py: added action that switches the
	reset-to-default-tool behavior of the toolbox.
	* gaphor/diagram/actions.py: classes, packages, etc. are assigned a
	unique name on creation.
	* gaphor/ui/mainwindow.py: added toolbox items to the menu.

2004-10-07  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/itemtool.py, gaphor/ui/*: updated to use new
	UndoManager interface of DiaCanvas2 0.14.0. Requires CVS version
	of diacanvas2 to work.

2004-10-01  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	Release 0.6.0

2004-09-28  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/itemtool.py, itemactions.py, nameditem.py:
	Added compatibility layer for Diacanvas 0.13.0.

2004-09-27  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* data/plugins/pynsource: created nice Dialog for loading files
	* data/plugins/liveobjectbrowser: Use AbstractWindow as mediator

2004-09-26  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* data/plugins/diagramlayout: new plugin, layout elements in a diagram
	* data/plugins/pynsource: new plugin. Create diagrams from Python
	code. Uses Andy Bulka's PyNSource code.
	# During creation of the plugin I noticed a bug in Associations:
	# The aggregation attribute of the wrong Property instance is used.
	# This behavior has been fixed:
	* gaphor/storage.py: added workaround in load_elements_generator()
	* gaphor/diagram/association.py: updated code to show aggregation on
	the right end.
	* gaphor/UML/uml2.gaphor: loaded and saved (bug no longer in data
	model)
	* utils/genUML2.py: updated.

2004-09-14  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/itemactions.py: Support new Editable interface.
	* gaphor/diagram/*.py: updated diagram items.

2004-09-05  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/ui/mainactions.py: Removed multithread stuff.